--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,27 +2,13 @@
     My Styles and for overwriting default bootstrap styles
 */
 
-.my-page-header {
+
+/*** Post List Styles **********************************************************/
+
+.my-post-list-page-header {
      padding-bottom: 0px;
     margin: 10px 0 20px;
     border-bottom: 2px solid LightSalmon ;
-}
-
-.my-well-height {
-    height: 100px;
-}
-
-.my-padding-left-1 {
-    padding-left: 1px;
-}
-
-.my-padding-right-1 {
-    padding-right: 1px;
-}
-
-.my-vertical-center {
-  display: flex;
-  align-items: center;
 }
 
 .my-post-votescore {
@@ -34,8 +20,6 @@
     margin-left: 5px;
     margin-right: 5px;
 }
-
-/*************************************************************/
 
 .link listing .link {
     margin-bottom: 5px;
@@ -87,12 +71,12 @@ div {
 }
 
 .link .title {
-    font-size: medium;
+    font-size: large;
     font-weight: normal;
     margin-bottom: 1px;
 }
 
-tagline {
+.tagline {
     color: #888;
     font-size: smaller;
     margin-top: 5px;
@@ -143,8 +127,86 @@ ol, ul {
 }
 
 
+/*** NavBar Styles
+    generated from: https://work.smarchal.com/twbscolor/css/e74c3cc0392becf0f1ffbbbc0
 
+****/
 
+/* Add this style to overide default navbar background-image*/
+.navbar-inverse {
+    background-image: none;
+}
+
+.navbar-inverse {
+  background-color: #f0781c;
+  border-color: #94e984;
+}
+.navbar-inverse .navbar-brand {
+  color: #ffffff;
+}
+.navbar-inverse .navbar-brand:hover,
+.navbar-inverse .navbar-brand:focus {
+  color: #3c21e5;
+}
+.navbar-inverse .navbar-text {
+  color: #ffffff;
+}
+.navbar-inverse .navbar-nav > li > a {
+  color: #ffffff;
+}
+.navbar-inverse .navbar-nav > li > a:hover,
+.navbar-inverse .navbar-nav > li > a:focus {
+  color: #3c21e5;
+}
+.navbar-inverse .navbar-nav > .active > a,
+.navbar-inverse .navbar-nav > .active > a:hover,
+.navbar-inverse .navbar-nav > .active > a:focus {
+  background-image: none; /* Add this line here to make atice background color works*/
+  color: #3c21e5;
+  background-color: #94e984;
+}
+.navbar-inverse .navbar-nav > .open > a,
+.navbar-inverse .navbar-nav > .open > a:hover,
+.navbar-inverse .navbar-nav > .open > a:focus {
+  color: #3c21e5;
+  background-color: #94e984;
+}
+.navbar-inverse .navbar-toggle {
+  border-color: #94e984;
+}
+.navbar-inverse .navbar-toggle:hover,
+.navbar-inverse .navbar-toggle:focus {
+  background-color: #94e984;
+}
+.navbar-inverse .navbar-toggle .icon-bar {
+  background-color: #ffffff;
+}
+.navbar-inverse .navbar-collapse,
+.navbar-inverse .navbar-form {
+  border-color: #ffffff;
+}
+.navbar-inverse .navbar-link {
+  color: #ffffff;
+}
+.navbar-inverse .navbar-link:hover {
+  color: #3c21e5;
+}
+
+@media (max-width: 767px) {
+  .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
+    color: #ffffff;
+  }
+  .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
+  .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
+    color: #3c21e5;
+  }
+  .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a,
+  .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:hover,
+  .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:focus {
+    color: #3c21e5;
+    background-color: #94e984;
+  }
+}
 
 
 
