feat: Add redux-form and Create Add Post Page and related UI parts

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -170,6 +170,17 @@ ol, ul {
     min-height: 60px;
 }
 
+
+/**** Form Styles **/
+.help-block {
+    margin-top: 5px;
+    margin-bottom: 0px;
+}
+
+.form-group {
+    margin-bottom: 10px;
+}
+
 /***
     NavBar Styles
 
