--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,6 +11,11 @@
     border-bottom: 2px solid LightSalmon ;
 }
 
+.my-header-title {
+    color: dodgerblue;
+    font-weight: bold;
+    font-size: x-large;
+}
 .my-post-votescore {
     text-align: center;
     color: red;
@@ -180,6 +185,27 @@ ol, ul {
 .form-group {
     margin-bottom: 10px;
 }
+
+.my-form-page-header {
+    display: flex;
+    padding-bottom: 0px;
+    margin: 10px 0 20px;
+    border-bottom: 2px solid LightSalmon ;
+}
+
+.back-arrow {
+    display: block;
+    top: 20px;
+    left: 15px;
+    width: 50px;
+    height: 33px;
+    background: white;
+    background-image: url('./icons/arrow-back.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 28px;
+    font-size: 0;
+  }
 
 /***
     NavBar Styles
